--- a/homework_13/style.css
+++ b/homework_13/style.css
@@ -4,6 +4,8 @@ body {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -16,9 +18,15 @@ h6 {
 }
 /*for header*/
 .container {
-  max-width: 1170px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+.main-wrap {
+  display: flex;
+}
+.content {
+  width: 100%;
 }
 .navbar {
   display: flex;
@@ -42,8 +50,257 @@ h6 {
 }
 
 /*for heading*/
-.dropdown-button {
-  background: #ffffff;
+.heading-body {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 70px;
+}
+.dropdown {
+  position: relative;
+  background: #FFFFFF;
   box-shadow: 0px 2px 12px rgba(173, 152, 143, 0.18);
   border-radius: 25px;
 }
+.drodown__value {
+  min-width: 174px;
+  position: relative;
+  font-size: 14px;
+  line-height: 17px;
+  min-width: 174px;
+  padding: 10px 0px 10px 30px;
+}
+.dropdown__list {
+  display: none; 
+  box-shadow: 0px 2px 12px rgba(173, 152, 143, 0.18);
+}
+.dropdown:hover .dropdown__list {
+  display: block;
+}
+.dropdown__list{
+  position: absolute;
+  list-style-type: none;
+  left: 0;
+  font-size: 14px;
+  line-height: 17px;
+}
+.dropdown__item {
+  min-width: 174px;
+  padding: 10px 0px 10px 30px;
+}
+.up {
+  transform: rotate(180deg);
+}
+.angle {
+  width: 12px;
+}
+.heading-title {
+font-family: "Rubik", sans-serif;
+font-weight: bold;
+font-size: 36px;
+line-height: 43px;
+color: #1A212F;
+}
+
+/*for main*/
+.sidebar {
+  width: 220px;
+  padding: 30px 10px 30px 0;
+}
+.filter__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 13px;
+}
+.filter__item {
+  margin-bottom: 35px;
+}
+.filter__check {
+  margin-bottom: 15px;
+}
+.filter__label-text {
+  margin-left: 4px;
+  font-size: 14px;
+  line-height: 19px;
+  vertical-align: top;
+}
+.filter__button {
+  border: 1px solid #FAC663;
+  border-radius: 25px;
+  padding: 15px;
+  background-color: #FFFFFF;
+  min-width: 185px;
+}
+.price {
+  font-size: 0;
+}
+
+.price__input {
+  width: calc(50% - 5px);
+  border-radius: 0;
+  border: 1px solid #E1E1E1;
+  padding: 3px 7px;
+}
+
+.price__input:first-child {
+  margin-right: 10px;
+}
+.card__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 110px;
+}
+.card__item {
+  width: calc(33.33% - 30px);
+  margin: 30px 15px;
+  list-style-type: none;
+  border: 1px solid #E1E1E1;
+  border-radius: 6px;
+}
+
+.card__title {
+  font-family: "Rubik", sans-serif;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.card__content {
+  padding: 25px 20px;
+}
+
+.card__description-item {
+    margin-bottom: 12px;
+}
+
+.card__button {
+  margin-top: 25px;
+  background-color:#FF7236;
+  border: none;
+  border-radius: 25px;
+  padding: 6px;
+  color: #ffffff;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  min-height: 46px;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+}
+.card__img {
+  height: 185px;
+  width: 100%;
+  object-fit: cover;
+}
+.card__button-img {
+  width: 34px;
+  height: 34px;
+  position: absolute;
+  right: 6px;
+  top: 6px;
+}
+/*for bunner*/
+.bunner {
+  background-image: url(images/banner.png);
+  min-height: 400px;
+  background-size: cover;
+  margin-bottom: 140px;
+  border-radius: 10px;
+}
+.bunner__content {
+  padding: 78px 50px 78px 270px;
+  align-items: center;
+}
+.bunner__title--first {
+font-family:  "Rubik";
+font-weight: bold;
+font-size: 36px;
+color: #1A212F;
+}
+.bunner__title--second {
+  font-family:  "Rubik";
+  font-weight: bold;
+  font-size: 56px;
+  color: #1A212F;
+}
+.bunner__description {
+  max-width: 255px;
+  font-size: 14px;
+  padding: 25px 0px 25px 0px;
+}
+.bunner__button {
+  margin-top: 25px;
+  background-color:#ffffff;
+  border: none;
+  border-radius: 25px;
+  padding: 9px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  min-width: 206px;
+  min-height: 46px;
+  position: relative;
+  cursor: pointer;
+  justify-content: center;
+}
+.bunner__button-img {
+  width: 34px;
+  height: 34px;
+  position: absolute;
+  right: 6px;
+  top: 6px;
+}
+ /*for contacts*/
+ 
+ .contacts {
+   background-color: #FAC663;
+   padding: 70px 0 70px 0;
+   position: relative;
+ }
+ .contacts__inner {
+   padding-right: 60%;
+ }
+ .contacts__header {
+   font-size: 30px;
+   font-weight: bold;
+   color: #1A212F;
+ }
+ .contacts__title {
+  font-size: 14px;
+  font-weight: bold;
+  color: #1A212F;
+  margin-bottom: 5px;
+ }
+ .contacts__link{
+  font-size: 14px;
+  color: #1A212F;
+  text-decoration: none;
+ }
+ .contacts__item {
+   margin-top: 35px;
+ }
+
+ .map {
+   position: absolute;
+   width: 60%;
+   height: 100%;
+   right: 0;
+   top: 0;
+   background-image: url(images/map.png);
+   background-size: cover;
+
+ }
+ .footer {
+   padding-top: 12px;
+ }
+ .footer__content {
+   min-height: 50px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+ }
+ .footer__item {
+   font-size: 12px;
+   color: #8F8F8F;
+ }
