Add changes to hw13 responsive

--- a/homework_13/style.css
+++ b/homework_13/style.css
@@ -55,11 +55,30 @@ h6 {
   justify-content: space-between;
   padding-top: 70px;
 }
+.heading-right {
+  display: flex;
+}
 .dropdown {
   position: relative;
   background: #FFFFFF;
   box-shadow: 0px 2px 12px rgba(173, 152, 143, 0.18);
   border-radius: 25px;
+}
+.button__filters{
+  background: #FFFFFF;
+  box-shadow: 0px 2px 12px rgba(173, 152, 143, 0.18);
+  border-radius: 25px;
+  font-size: 14px;
+  line-height: 17px;
+  min-width: 174px;
+  padding: 10px 0px 10px 30px;
+  margin-right: 30px;
+  display: none;
+}
+.image__filters {
+  width: 12px;
+  height: 15px;
+  margin-right: 10px;
 }
 .drodown__value {
   min-width: 174px;
@@ -304,3 +323,23 @@ color: #1A212F;
    font-size: 12px;
    color: #8F8F8F;
  }
+ /*responsible*/
+ @media only screen and (max-width: 768px)  {
+  .sidebar {
+  display: none;
+  }
+  .bunner {     
+  background-position: 60% center;        
+  }
+  .bunner__content {
+    padding: 78px 50px 78px 50px;
+    align-items: center;
+  }
+  .card__item {
+  width: calc(50% - 30px);
+  margin: 30px 15px;
+  }
+  .button__filters {
+    display: block;
+  }
+}
