--- a/homework_13/style.css
+++ b/homework_13/style.css
@@ -323,7 +323,7 @@ color: #1A212F;
    font-size: 12px;
    color: #8F8F8F;
  }
- /*responsible*/
+ /*responsive*/
  @media only screen and (max-width: 768px)  {
   .sidebar {
   display: none;
