--- a/homework_13/style.css
+++ b/homework_13/style.css
@@ -70,8 +70,8 @@ h6 {
   border-radius: 25px;
   font-size: 14px;
   line-height: 17px;
-  min-width: 174px;
-  padding: 10px 0px 10px 30px;
+  min-width: 130px;
+  padding: 10px 0px 10px 15px;
   margin-right: 30px;
   display: none;
 }
@@ -324,22 +324,96 @@ color: #1A212F;
    color: #8F8F8F;
  }
  /*responsive*/
- @media only screen and (max-width: 768px)  {
+ @media only screen and (max-width: 1024px)  {
+   .container {
+     padding: 0 45px;
+   }
   .sidebar {
-  display: none;
+    display: none;
   }
   .bunner {     
-  background-position: 60% center;        
+    background-position: 60% center;        
   }
   .bunner__content {
     padding: 78px 50px 78px 50px;
     align-items: center;
   }
   .card__item {
-  width: calc(50% - 30px);
-  margin: 30px 15px;
+    width: calc(50% - 30px);
+    margin: 30px 15px;
   }
   .button__filters {
     display: block;
+  }
+  .map {
+    width: 50%;
+  }
+  .contacts__inner {
+    padding-right: 50%;
+  }
+}
+
+@media only screen and (max-width: 600px)  {
+  .container {
+    padding: 0 15px;
+  }
+  .card__item {
+    width: 100%;
+    margin: 30px 15px;
+  }
+
+  .header .nav {
+    display: none;
+  }
+  .heading-body {
+    display: block;
+  }
+  .heading-left {
+    padding-bottom: 50px;
+  }
+  .button__filters {
+    margin-right: 25px;
+  }
+  .bunner__content {
+    padding: 50px 25px 260px 25px;
+  }
+
+  .bunner {
+    background-color: #FAC663;
+  }
+
+  .map {
+    width: 100vw;
+    height: 300px;
+    margin-left: -15px;
+    position: relative;
+    order: 1;
+  }
+
+  .contacts {
+    padding: 0;
+  }
+
+  .contacts__inner {
+    padding: 40px 0;
+  }
+
+  .contacts .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav {
+    margin-top: 30px;
+  }
+
+  .nav-link {
+    padding: 0;
+    margin-right: 30px;
   }
 }
